Implement the spotcheck mismatch diff modal

--- a/src/main/webapp/WEB-INF/app/app.css
+++ b/src/main/webapp/WEB-INF/app/app.css
@@ -157,6 +157,12 @@
             @apply m-1;
         }
     }
+
+    .spotcheck-diff-modal {
+        > [data-reach-dialog-content] {
+           @apply w-11/12;
+        }
+    }
 }
 
 /*
